[package]
name = "fund_support"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
solana-program = "2.0.10"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }

[lib]
name = "fund_support"
crate-type = ["cdylib", "lib"]
