[package]
name = "token_hook_program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0.10"
# base64 = "0.22.1"
borsh = "1.5.1"
# bytemuck = "1.18.0"
# num-derive = "0.4.2"
# num-traits = "0.2.19"
# num_enum = "0.7.3"
# serde = "1.0.210"
# serde_with = "3.9.0"
# solana-zk-sdk = "2.0.10"
# spl-pod = "0.4.0"
spl-tlv-account-resolution = "0.8.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }
# spl-token-confidential-transfer-proof-extraction = "0.1.0"
spl-transfer-hook-interface = "0.8.2"
# thiserror = "1.0.64"


[lib]
name = "token_hook_program"
crate-type = ["cdylib", "lib"]
